@@ -62,7 +62,6 @@ contains
     if (associated(section)) then
        erosion%dotransport = .True.
        call GetValue(section,'grid_factor',erosion%grid_magnifier)
-       call GetValue(section,'ndt',erosion%transport_ndt)
        call GetValue(section,'deformable_velo',erosion%transport_fac)
        call GetValue(section,'dirty_ice_thick',erosion%dirty_ice_max)
        call GetValue(section,'soft_a',erosion%soft_a)
@@ -91,8 +90,6 @@ contains
           call write_log('Sediment Transport')
           call write_log('------------------')
           write(message,*) 'Sediment grid resolution increased by : ',erosion%grid_magnifier
-          call write_log(message)
-          write(message,*) 'Updating sediment distribution every ',erosion%transport_ndt,' time steps'
           call write_log(message)
           write(message,*) 'deformable sediment velo factor: ',erosion%transport_fac
           call write_log(message)
